<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="keker.footcoutiche.MainActivity" >

<Button
    android:id="@+id/Inventaire"
    android:layout_width="150dip"
    android:layout_height="40dip"
android:layout_centerHorizontal="true"
    android:layout_marginTop="40dip"
    android:background="#ff8259"
    android:text="@string/inventaire"/>

<Button
    android:id="@+id/Course"
    android:layout_width="150dip"
    android:layout_height="40dip"
    android:layout_below="@id/Inventaire"
android:layout_centerHorizontal="true"
    android:layout_marginTop="40dip"
    android:background="#ff8259"
    android:text="@string/course"/>

<Button
    android:id="@+id/Statistique"
    android:layout_width="150dip"
    android:layout_height="40dip"
      android:layout_below="@id/Course"
android:layout_centerHorizontal="true"
    android:layout_marginTop="40dip"
    android:background="#ff8259"
    android:text="@string/statistique_period"/>

<Button
    android:id="@+id/Statistique_graph"
    android:layout_width="150dip"
    android:layout_height="40dip"
      android:layout_below="@id/Statistique"
android:layout_centerHorizontal="true"
    android:layout_marginTop="10dip"
    android:background="#ff8259"
    android:text="@string/statistique_graph"/>

<Button
    android:id="@+id/Archive"
    android:layout_width="150dip"
    android:layout_height="40dip"
      android:layout_below="@id/Statistique_graph"
android:layout_centerHorizontal="true"
    android:layout_marginTop="10dip"
    android:background="#ff8259"
    android:text="@string/archive"/>

<TextView
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/Archive"
    android:layout_marginTop="15dip"
    android:textSize="14sp"
    android:textColor="#8D9392"
    android:gravity="center"
    android:textStyle="italic"
    android:text="Powered by Keker@pps, Copyright 2015 !"
    />
    
    
</RelativeLayout>
